--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev:all": "mprocs"
   },
   "dependencies": {
+    "@ai-sdk/google": "^2.0.23",
     "@hookform/resolvers": "^5.2.2",
     "@neondatabase/serverless": "^1.0.2",
     "@radix-ui/react-label": "^2.1.7",
@@ -19,6 +20,7 @@
     "@trpc/client": "^11.7.0",
     "@trpc/server": "^11.7.0",
     "@trpc/tanstack-react-query": "^11.7.0",
+    "ai": "^5.0.80",
     "better-auth": "^1.3.32",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
