--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@neondatabase/serverless": "^1.0.2",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@sentry/nextjs": "^10.22.0",
     "@tanstack/react-query": "^5.90.5",
     "@trpc/client": "^11.7.0",
     "@trpc/server": "^11.7.0",
