--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@ai-sdk/google": "^2.0.23",
     "@hookform/resolvers": "^5.2.2",
     "@neondatabase/serverless": "^1.0.2",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@sentry/nextjs": "^10.22.0",
     "@tanstack/react-query": "^5.90.5",
     "@trpc/client": "^11.7.0",
