--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@ai-sdk/google": "^2.0.23",
     "@hookform/resolvers": "^5.2.2",
     "@neondatabase/serverless": "^1.0.2",
+    "@polar-sh/better-auth": "^1.1.11",
+    "@polar-sh/sdk": "^0.40.1",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.7",
