--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@neondatabase/serverless": "^1.0.2",
     "@polar-sh/better-auth": "^1.1.9",
     "@polar-sh/sdk": "^0.35.4",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.7",
@@ -37,8 +38,10 @@
     "lucide-react": "^0.548.0",
     "next": "16.0.0",
     "next-themes": "^0.4.6",
+    "random-word-slugs": "^0.1.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.65.0",
     "server-only": "^0.0.1",
     "sonner": "^2.0.7",
