--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@hookform/resolvers": "^5.2.2",
     "@neondatabase/serverless": "^1.0.2",
     "@polar-sh/better-auth": "^1.1.9",
-    "@polar-sh/sdk": "^0.35.4",
+    "@polar-sh/sdk": "^0.40.3",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -32,8 +33,10 @@
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
+    "import-in-the-middle": "^2.0.2",
     "inngest": "^3.44.3",
     "lucide-react": "^0.548.0",
     "next": "16.0.0",
@@ -46,6 +49,7 @@
     "react-hook-form": "^7.65.0",
     "server-only": "^0.0.1",
     "sonner": "^2.0.7",
+    "superjson": "^2.2.6",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
   },
@@ -55,6 +59,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "baseline-browser-mapping": "^2.9.14",
     "drizzle-kit": "^0.31.5",
     "mprocs": "^0.7.3",
     "tailwindcss": "^4",
