--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@trpc/client": "^11.7.0",
     "@trpc/server": "^11.7.0",
     "@trpc/tanstack-react-query": "^11.7.0",
+    "@xyflow/react": "^12.10.0",
     "ai": "^5.0.80",
     "better-auth": "^1.3.32",
     "class-variance-authority": "^0.7.1",
