--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ai-sdk/google": "^2.0.23",
     "@hookform/resolvers": "^5.2.2",
     "@neondatabase/serverless": "^1.0.2",
+    "@paralleldrive/cuid2": "^3.0.6",
     "@polar-sh/better-auth": "^1.1.9",
     "@polar-sh/sdk": "^0.40.3",
     "@radix-ui/react-alert-dialog": "^1.1.15",
