--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "import-in-the-middle": "^2.0.2",
     "inngest": "^3.44.3",
     "jotai": "^2.16.2",
+    "ky": "^1.14.2",
     "lucide-react": "^0.548.0",
     "next": "16.0.0",
     "next-themes": "^0.4.6",
@@ -55,6 +56,7 @@
     "sonner": "^2.0.7",
     "superjson": "^2.2.6",
     "tailwind-merge": "^3.3.1",
+    "toposort": "^2.0.2",
     "zod": "^4.1.12"
   },
   "devDependencies": {
@@ -63,6 +65,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/toposort": "^2.0.7",
     "baseline-browser-mapping": "^2.9.14",
     "drizzle-kit": "^0.31.5",
     "mprocs": "^0.7.3",
