--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
+    "handlebars": "^4.7.8",
     "import-in-the-middle": "^2.0.2",
     "inngest": "^3.44.3",
     "jotai": "^2.16.2",
