--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@ai-sdk/google": "^2.0.23",
+    "@ai-sdk/openai": "^3.0.11",
     "@hookform/resolvers": "^5.2.2",
     "@inngest/realtime": "^0.4.5",
     "@neondatabase/serverless": "^1.0.2",
@@ -34,7 +35,7 @@
     "@trpc/server": "^11.7.0",
     "@trpc/tanstack-react-query": "^11.7.0",
     "@xyflow/react": "^12.10.0",
-    "ai": "^5.0.80",
+    "ai": "^6.0.36",
     "better-auth": "^1.3.32",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
