--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dev:all": "dotenv -- mprocs"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^3.0.14",
     "@ai-sdk/google": "^2.0.23",
     "@ai-sdk/openai": "^3.0.11",
     "@hookform/resolvers": "^5.2.2",
