--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@polar-sh/better-auth": "^1.1.9",
     "@polar-sh/sdk": "^0.40.3",
     "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
