--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
+    "cryptr": "^6.4.0",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "dotenv-cli": "^11.0.0",
