--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "taskflow",
   "version": "0.1.0",
   "private": true,
+  "description": "A powerful, open-source workflow automation platform built with Next.js. Create complex, visual workflows to automate tasks, connect APIs, and leverage AI capabilities.",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -13,32 +14,31 @@
     "dev:all": "dotenv -- mprocs"
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "^3.0.14",
-    "@ai-sdk/google": "^2.0.23",
-    "@ai-sdk/openai": "^3.0.11",
+    "@ai-sdk/anthropic": "^3.0.35",
+    "@ai-sdk/google": "^2.0.52",
+    "@ai-sdk/openai": "^3.0.25",
     "@hookform/resolvers": "^5.2.2",
     "@inngest/realtime": "^0.4.5",
     "@neondatabase/serverless": "^1.0.2",
-    "@paralleldrive/cuid2": "^3.0.6",
-    "@polar-sh/better-auth": "^1.1.9",
-    "@polar-sh/sdk": "^0.40.3",
+    "@paralleldrive/cuid2": "^3.3.0",
+    "@polar-sh/better-auth": "^1.6.4",
+    "@polar-sh/sdk": "^0.42.5",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
-    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "@sentry/nextjs": "^10.20.0",
-    "@tanstack/react-query": "^5.90.5",
-    "@trpc/client": "^11.7.0",
-    "@trpc/server": "^11.7.0",
-    "@trpc/tanstack-react-query": "^11.7.0",
+    "@tanstack/react-query": "^5.90.20",
+    "@trpc/client": "^11.9.0",
+    "@trpc/server": "^11.9.0",
+    "@trpc/tanstack-react-query": "^11.9.0",
     "@xyflow/react": "^12.10.0",
-    "ai": "^6.0.36",
-    "better-auth": "^1.3.32",
+    "ai": "^6.0.67",
+    "better-auth": "^1.4.18",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
@@ -48,40 +48,41 @@
     "dotenv-cli": "^11.0.0",
     "drizzle-orm": "^0.44.7",
     "handlebars": "^4.7.8",
-    "import-in-the-middle": "^2.0.2",
-    "inngest": "^3.44.3",
-    "jotai": "^2.16.2",
-    "ky": "^1.14.2",
+    "import-in-the-middle": "^2.0.6",
+    "inngest": "^3.50.0",
+    "jotai": "^2.17.0",
+    "ky": "^1.14.3",
     "lucide-react": "^0.548.0",
-    "next": "16.0.0",
+    "next": "16.1.6",
     "next-themes": "^0.4.6",
-    "nuqs": "^2.7.2",
+    "nuqs": "^2.8.7",
     "random-word-slugs": "^0.1.7",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "react-error-boundary": "^6.0.0",
-    "react-hook-form": "^7.65.0",
+    "react": "19.2.4",
+    "react-dom": "19.2.4",
+    "react-error-boundary": "^6.1.0",
+    "react-hook-form": "^7.71.1",
+    "require-in-the-middle": "^8.0.1",
     "server-only": "^0.0.1",
     "sonner": "^2.0.7",
     "superjson": "^2.2.6",
-    "tailwind-merge": "^3.3.1",
+    "tailwind-merge": "^3.4.0",
     "toposort": "^2.0.2",
-    "zod": "^4.1.12"
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/node": "^20.19.30",
+    "@types/react": "^19.2.10",
+    "@types/react-dom": "^19.2.3",
     "@types/toposort": "^2.0.7",
-    "baseline-browser-mapping": "^2.9.14",
-    "drizzle-kit": "^0.31.5",
-    "inngest-cli": "^1.16.0",
+    "baseline-browser-mapping": "^2.9.19",
+    "drizzle-kit": "^0.31.8",
+    "inngest-cli": "^1.16.1",
     "mprocs": "^0.7.3",
-    "tailwindcss": "^4",
-    "tsx": "^4.20.6",
+    "tailwindcss": "^4.1.18",
+    "tsx": "^4.21.0",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5"
+    "typescript": "^5.9.3"
   }
 }
